修改“更新状态”scene的部分UI： 1.修改提交和附加照片button为command menu 2.增加标题“更新状态”

--- a/app/views/upload/upload-scene.html
+++ b/app/views/upload/upload-scene.html
@@ -1,3 +1,7 @@
+<div id="id_header_title" class="palm-hasheader">
+	<div class="palm-header" id="id_main_hdr">
+	</div>
+</div>
 <div class="palm-group">
     <div class="palm-group-title">
         <span x-mojo-loc="" id="id_title"></span>
@@ -12,8 +16,8 @@
         </div>
     </div>
 </div>
-<div x-mojo-element="Button" id="id_select_img"></div>
-<div x-mojo-element="Button" id="id_send_status"></div>
+<!-- <div x-mojo-element="Button" id="id_select_img"></div>
+<div x-mojo-element="Button" id="id_send_status"></div> -->
 <div id="selection">
         
 </div>
