为upload scene增加标题间距

--- a/app/views/upload/upload-scene.html
+++ b/app/views/upload/upload-scene.html
@@ -2,6 +2,7 @@
 	<div class="palm-header" id="id_main_hdr">
 	</div>
 </div>
+<div class="palm-header-spacer"></div>
 <div class="palm-group">
     <div class="palm-group-title">
         <span x-mojo-loc="" id="id_title"></span>
