修正笔误引起的无法重复更新状态的bug 删除例子程序带的米菲兔图片 关掉了进入更新状态页面时的Internet连接状态检查

--- a/app/views/upload/upload-scene.html
+++ b/app/views/upload/upload-scene.html
@@ -1,6 +1,7 @@
 <div id="id_header_title" class="palm-hasheader">
 	<div class="palm-header" id="id_main_hdr">
 	</div>
+	<!-- <div x-mojo-element="Spinner" id="large-activity-spinner" class="my_custom_spinner_upload"></div> -->
 </div>
 <div class="palm-header-spacer"></div>
 <div class="palm-group">
@@ -22,3 +23,4 @@
 <div id="selection">
         
 </div>
+	
