--- a/stylesheets/helloworld.css
+++ b/stylesheets/helloworld.css
@@ -1,8 +1,8 @@
 /* TODO: put your application-specific CSS here */
 .my_custom_spinner{
     position: absolute;
-    top:220px;
-    left: 160px;
+    top: 220px;
+    left: 50%;
     margin-left: -64px;
     margin-top:-64px;
 }
