Add uploading/updating spinner

--- a/app/views/upload/upload-scene.html
+++ b/app/views/upload/upload-scene.html
@@ -1,9 +1,10 @@
-<div id="id_header_title" class="palm-hasheader">
-	<div class="palm-header" id="id_main_hdr">
-	</div>
-	<!-- <div x-mojo-element="Spinner" id="large-activity-spinner" class="my_custom_spinner_upload"></div> -->
+<div id="main" class="palm-hasheader">
+	<div class="palm-header" >
+        <div x-mojo-element="Spinner" id="id_my_spinner_in_header" class='palm-header-right'></div>
+	    <div class='palm-header center' id="id_main_hdr"></div>
+    </div>
 </div>
-<div class="palm-header-spacer"></div>
+<!-- <div class="palm-header-spacer"></div> -->
 <div class="palm-group">
     <div class="palm-group-title">
         <span x-mojo-loc="" id="id_title"></span>
@@ -20,7 +21,3 @@
 </div>
 <!-- <div x-mojo-element="Button" id="id_select_img"></div>
 <div x-mojo-element="Button" id="id_send_status"></div> -->
-<div id="selection">
-        
-</div>
-	
