增加了退出登录

--- a/app/views/auth/auth-scene.html
+++ b/app/views/auth/auth-scene.html
@@ -9,7 +9,7 @@
 -->
 <div class="palm-group">
     <div class="palm-group-title">
-        <span x-mojo-loc="">用户名</span>
+        <span x-mojo-loc="">帐号</span>
     </div>
     <div class="palm-list">
         <div class="palm-row single">
