--- a/app/views/main/main-scene.html
+++ b/app/views/main/main-scene.html
@@ -1,6 +1,9 @@
 <div class="palm-hasheader">
     <div class="palm-header">
-        增加内容！
+        首页
     </div>
 </div>
 <div class="palm-header-spacer"></div>
+
+    <div id="id_main_list" x-mojo-element="List" ></div>
+
